# Oregonious_Trail_Client

./: Cargo.toml  LICENSE  README.md  TYPES.md
src/: commands.rs  conditions_processor.rs  engine.rs  main.copy.rs  main.rs  mod.rs  server.rs  structs.rs  utils.rs
src/client/: client.rs
src/config/: game_data.json  game_state.json  profile_ian.json
src/controllers/: decision_controller.rs  desicion_controller.rs
src/processors/: action_processor.rs  conditions_processor.rs  game_generator.rs  mod.rs  report_processor.rs
src/structs/: Biome.rs  Game_Data.rs  biome.rs  game_data.rs  game_state.rs  leg.rs  location.rs  mod.rs  party.rs  player.rs  segment.rs
src/utils/: utils.rs
