[package]
name = "Oregonious_Trail_Client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Optional, for JSON serialization/deserialization
tokio = { version = "1", features = ["full"] }
